@@ -95,7 +95,6 @@ namespace lsp
             hMouse.nTop     = 0;
             hMouse.pWidget  = NULL;
 
-            hKeys.nKeys     = 0;
             hKeys.pWidget   = NULL;
 
             pClass          = &metadata;
@@ -651,6 +650,33 @@ namespace lsp
             return (pChild != NULL) ? remove(pChild) : STATUS_OK;
         }
 
+        size_t Window::make_key_pressed(ws::code_t code)
+        {
+            for (size_t i=0, n=hKeys.vKeys.size(); i<n; ++i)
+            {
+                ws::code_t *xc = hKeys.vKeys.uget(i);
+                if ((xc != NULL) && (code == *xc))
+                    return hKeys.vKeys.size();
+            }
+
+            hKeys.vKeys.add(code);
+            return hKeys.vKeys.size();
+        }
+
+        size_t Window::make_key_released(ws::code_t code)
+        {
+            for (size_t i=0; i < hKeys.vKeys.size(); )
+            {
+                ws::code_t *xc = hKeys.vKeys.uget(i);
+                if ((xc != NULL) && (code == *xc))
+                    hKeys.vKeys.remove(i);
+                else
+                    ++i;
+            }
+
+            return hKeys.vKeys.size();
+        }
+
         status_t Window::handle_event(const ws::event_t *e)
         {
             status_t result = STATUS_OK;
@@ -791,12 +817,14 @@ namespace lsp
                 case ws::UIE_KEY_DOWN:
                 {
                     // Find the keyboard event handler
-                    Widget *h       = (hKeys.pWidget != NULL) ? hKeys.pWidget : pFocused;
+                    lsp_trace("key down: keys.pWidget = %p, pFocused = %p, nkeys=%d",
+                        hKeys.pWidget, pFocused, int(hKeys.vKeys.size()));
+                    Widget *h       = pFocused; //(hKeys.pWidget != NULL) ? hKeys.pWidget : pFocused;
                     if (h == NULL)
                         h               = find_widget(e->nLeft, e->nTop);
 
                     // Take focus first and acquire keyboard lock
-                    ++hKeys.nKeys;
+                    make_key_pressed(e->nCode);
                     hKeys.pWidget       = h;
 
                     // Handle key press event
@@ -814,8 +842,11 @@ namespace lsp
                     Widget *h       = hKeys.pWidget;
 
                     // Release key lock state
-                    if ((--hKeys.nKeys) <= 0)
+                    if (make_key_released(e->nCode) <= 0)
                         hKeys.pWidget       = NULL;
+
+                    lsp_trace("key up  : keys.pWidget = %p, pFocused = %p, nkeys=%d",
+                            hKeys.pWidget, pFocused, int(hKeys.vKeys.size()));
 
                     // Handle key press event
                     if (h == this)
@@ -982,6 +1013,7 @@ namespace lsp
             if (w == old)
                 return false;
             pFocused    = w;
+            lsp_trace("take_focus: %p", pFocused);
 
             // Notify previous focus holder about focus change
             if (old != NULL)
